# dajarep_rs

./: Cargo.toml  README.md  sjis.txt
.github/workflows/: release.yml
src/: dajarep.rs  lib.rs  main.rs  sentence.rs  word.rs
