[package]
name = "dajarep"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "駄洒落を検出するライブラリです"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.0.18", features = ["derive"]}
encoding_rs = "0.8.31"
lindera = { version = "0.18.0", features = ["ipadic"] }
regex = "1.6.0"
